--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "",
-  "source": "index.html",
+  "main": "index.html",
   "source": "index.html",
 
   "scripts": {
